<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.Question2Activity">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_question1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/who_is_your"/>
    <RadioGroup
        android:id="@+id/rg_options"
        android:layout_below="@id/tv_question1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_sachin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sachin_tendulkar"/>
        <RadioButton
            android:id="@+id/rb_virat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/virat_kohli"/>
        <RadioButton
            android:id="@+id/rb_adam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adam_gilchirst"/>
        <RadioButton
            android:id="@+id/rb_jacques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jacques_kallis"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_next1"
        android:layout_below="@+id/rg_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</RelativeLayout>