<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.Question1Activity">

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/what_is_your_name"/>
    <EditText
        android:inputType="textCapSentences"
        android:id="@+id/et_answer1"
        android:layout_below="@id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_answer"/>
    <Button
        android:id="@+id/btn_next1"
        android:layout_below="@+id/et_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"/>

</RelativeLayout>