<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".ui.SummaryActivity">
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_game_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/game"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_answer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/what_is_your_name"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_question2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:textStyle="normal"
        android:text="@string/who_is_your"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_answer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/who_is_your"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_question3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:textStyle="normal"
        android:text="@string/whats_are_the_colors"/>
    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_answer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/textview"
        android:text="@string/who_is_your"/>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:background="@color/black"/>

</LinearLayout>